<resources>
    <string name="app_name">Paiman</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="initial_loading_message">Loading…</string>
    <string name="main_card_missing_title">&lt;Missing Title&gt;</string>

    <string name="image_name">Image Name</string>
    <string name="add_painting_title">Add painting</string>
    <string name="add_painting_warning_name_missing">The title may not be empty.</string>
    <string name="add_painting_warning_image_missing">The image may not be empty.</string>
    <string name="error_image_not_readable">The image could not be processed.</string>
    <string name="add_painting_warning_no_id">The painting could not be saved.</string>
    <string name="add_painting_apply">Apply</string>
    <string name="add_painting_image_button_description">Button to add/change the main image</string>
    <string name="edit_painting_title">Edit painting</string>
    <string name="edit_painting_apply">Apply</string>
    <string name="edit_painting_image_button_description">Button to change the main image</string>
    <string name="edit_painting_old_to_wip">Move old to WIP</string>
    <string name="edit_painting_finished">Finished</string>
    <string name="edit_painting_not_finished">Unfinished</string>
    <string name="edit_painting_error_changing_title">The title could not be changed</string>
    <string name="edit_painting_error_replacing_main_image">The main Image could not be replaced</string>
    <string name="edit_painting_error_finished">"Finished" could not be set.</string>
    <string name="main_selection_delete">Delete</string>
    <string name="main_selection_title">%d selected</string>
    <string name="main_delete_notification">Deleted painting</string>
    <string name="title_activity_painting_detail">PaintingDetailActivity</string>
    <string name="painting_detail_finished">This painting was finished on %s.</string>
    <string name="painting_detail_unfinished">This painting has not finished.</string>
    <string name="painting_detail_sold">It has been sold to %1$s on %2$s with a price of %3$.2f</string>
    <string name="painting_detail_unsold">It has not been sold.</string>
    <string name="painting_detail_wipTitle">Work in Progress</string>
    <string name="painting_detail_refTitle">References</string>
    <string name="add_tag_title">Add a tag</string>
    <string name="add_tag_input_hint">New tag</string>
    <string name="add_tag_positive_button">Add</string>
    <string name="add_tag_negative_button">Cancel</string>
    <string name="sell_painting_purchaser">Purchaser</string>
    <string name="sell_painting_date">Date</string>
    <string name="sell_painting_price">Price</string>
    <string name="sell_painting_apply">Apply</string>
    <string name="delete_wip_ays">Are you sure to delete this Work In Progress picture?</string>
    <string name="delete_ref_ays">Are you sure to delete this reference picture?</string>
    <string name="delete_wip_ref_delete">Delete</string>
    <string name="delete_wip_ref_cancel">Cancel</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_current_version">Current version: %1$s</string>
    <string name="update_dialog_upstream_version">Upstream version: %1$s</string>
    <string name="update_dialog_upstream_version_pending">Pending…</string>
    <string name="update_dialog_do_update">Run update</string>
    <string name="update_dialog_cancel">Cancel</string>
    <string name="update_download_title">Paiman Update</string>
    <string name="update_download_description">Downloading new Paiman Version</string>

    <string name="dummyText">[dummy]</string>
    <string name="main_menu_update">Update</string>
</resources>
