<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/update_dialog_current_version"
            tools:text="@string/update_dialog_current_version"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/update_dialog_upstream_version"
            tools:text="@string/update_dialog_upstream_version"
            android:layout_below="@id/update_dialog_current_version"
    android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/update_dialog_do_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/update_dialog_update_button"
            android:layout_below="@+id/update_dialog_upstream_version"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>