<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_painting_detail"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.x4fyr.paiman.PaintingDetailActivity">
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:cardElevation="3dp" app:contentPadding="@dimen/default_gap"
                    android:layout_marginStart="@dimen/default_gap"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginTop="@dimen/default_gap"
            >
                <TextView
                        android:text="@string/dummyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/finishing"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/default_gap"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_height="match_parent" app:cardElevation="3dp"
                    app:contentPadding="@dimen/default_gap">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/dummyText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/selling" android:layout_weight="3"/>
                    <android.support.design.widget.FloatingActionButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_shopping_cart_white_24dp"
                            android:id="@+id/sell_painting" android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/default_gap"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_height="match_parent" app:cardElevation="3dp"
                    app:contentPadding="@dimen/default_gap">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="@string/painting_detail_wipTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/wipTitle" android:textStyle="bold"
                                android:paddingBottom="5dp" android:layout_weight="3"/>
                        <android.support.design.widget.FloatingActionButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/add_wip" android:layout_weight="1"
                                android:src="@drawable/ic_add_a_photo_white_24dp"
                                android:background="@color/colorAccent"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/wip" android:scrollbars="horizontal"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/default_gap"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_height="match_parent" app:cardElevation="3dp"
                    app:contentPadding="@dimen/default_gap">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                                android:text="@string/painting_detail_refTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/refTitle" android:textStyle="bold"
                                tools:text="@string/painting_detail_refTitle" android:paddingBottom="5dp"
                                android:layout_weight="3"/>
                        <android.support.design.widget.FloatingActionButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/add_ref" android:layout_weight="1"
                                android:background="@color/colorAccent"
                                android:src="@drawable/ic_add_a_photo_white_24dp"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/refs">
                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/default_gap"
                    android:layout_marginEnd="@dimen/default_gap"
                    android:layout_marginBottom="@dimen/default_gap"
                    android:layout_marginTop="@dimen/default_gap"
                    android:layout_height="wrap_content" app:cardElevation="3dp"
                    app:contentPadding="@dimen/default_gap">

                <de.x4fyr.paiman.lib.ui.TagLayout android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/tagLayout"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
